# cli

./: CHANGELOG.md  Cargo.toml  Makefile  README.md  build.rs
.github/workflows/: rust.yml
src/: kind.rs  main.rs
src/apiclient/: channel.rs  mod.rs  user_service_client.rs
src/cmd/: mod.rs  version.rs
src/cmd/create/: issue.rs  mod.rs  project.rs
src/cmd/delete/: issue.rs  issue_comment.rs  linked_account.rs  mod.rs  plan.rs  project.rs  service.rs  service_instance.rs
src/cmd/enable/: identity_provider.rs  mod.rs  payment_provider.rs  storage_provider.rs
src/cmd/generate/: controller.rs  do_generate.rs  do_generate_preflight.rs  feature.rs  mod.rs  model.rs  resource.rs  service.rs  use_storage_adapter.rs  uuid_v4.rs  xid.rs
src/cmd/get/: account.rs  api_key.rs  generation_feature.rs  generator.rs  issue.rs  issue_comment.rs  linked_account.rs  mod.rs  output.rs  plan.rs  service.rs  service_instance.rs  ssh_key.rs
src/cmd/history/: mod.rs
src/cmd/initialize/: mod.rs
src/cmd/list/: accounts.rs  api_keys.rs  generation_features.rs  generators.rs  issue_comments.rs  issues.rs  linked_accounts.rs  mod.rs  output.rs  plans.rs  projects.rs  service_instances.rs  services.rs  ssh_keys.rs  transforms.rs
src/cmd/login/: mod.rs
src/cmd/logout/: mod.rs
src/cmd/use_identity_provider/: mod.rs
src/cmd/use_storage_provider/: mod.rs
src/config/: mod.rs
src/consts/: env_vars.rs  mod.rs
src/protocol/: mod.rs  saas_rs.user.v1.rs  saas_rs.user.v1.serde.rs
src/util/: git.rs
