[package]
name = "saas-rs-cli"
description = "The SaaS RS CLI"
version = "0.2.9"
authors = ["David Rauschenbach <david@megalithic.llc>"]
homepage = "https://docs.saas-rs.com"
repository = "https://github.com/saas-rs/cli.git"
license = "MIT"
edition = "2021"

[[bin]]
name = "saas-rs"
path = "src/main.rs"

[package.metadata.cargo-machete]
ignored = []

[dependencies]
actix-cors = "0.7.1"
actix-web = { version = "4.11.0", features = ["rustls-0_23"] }
anyhow = "1.0.98"
clap = { version = "4.5.41", features = ["color", "derive"] }
dirs = "6.0.0"
git2 = "0.20.2"
log = { version = "0.4.27", features = ["kv_unstable", "kv_unstable_serde"] }
pbjson = "0.8.0"
pbjson-types = "0.8.0"
polars = { version = "0.49.1", default-features = false, features = ["fmt", "ipc", "json"] }
prost = "=0.14.1"
serde = "1.0.219"
serde_json = "1.0.141"
serde_yaml = "0.9.33"
tempfile = "3.20.0"
tmp_env = "0.1.1"
tokio = { version = "1.46.1", features = ["fs", "macros", "rt-multi-thread"] }
tokio-rustls = { version = "0.26.2", default-features = false, features = ["logging", "ring", "tls12"] }
tokio-stream = "0.1.17"
tokio-util = "0.7.15"
tonic = { version = "=0.14.2", features = ["tls-webpki-roots"] }
tonic-prost = "=0.14.2"
uuid = { version = "1.17.0", features = ["v4"] }
webbrowser = "1.0.5"
xid = "1.1.1"
