[package]
name = "saas-rs-cli"
description = "The SaaS RS CLI"
version = "0.4.1"
authors = ["David Rauschenbach <david@megalithic.llc>"]
homepage = "https://docs.saas-rs.com"
repository = "https://github.com/saas-rs/cli.git"
license = "MIT"
edition = "2024"

[[bin]]
name = "saas-rs"
path = "src/main.rs"

[package.metadata.cargo-machete]
ignored = []

[dependencies]
actix-cors = "0.7.1"
actix-web = { version = "4.12.1", features = ["rustls-0_23"] }
anyhow = "1.0"
clap = { version = "4.5", features = ["color", "derive"] }
dirs = "6.0.0"
git2 = "0.20.4"
log = { version = "0.4.29", features = ["kv_unstable", "kv_unstable_serde"] }
pbjson = "0.9.0"
pbjson-types = "0.9.0"
polars = { version = "0.53", default-features = false, features = ["fmt", "ipc", "json"] }
prost = "=0.14.3"
serde = "1.0"
serde_json = "1.0"
serde_yaml = "0.9.33"
tempfile = "3.23"
tmp_env = "0.1.1"
tokio = { version = "1.49", features = ["fs", "macros", "rt-multi-thread"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["logging", "ring", "tls12"] }
tokio-stream = "0.1.18"
tokio-util = "0.7"
tonic = { version = "=0.14.3", features = ["tls-webpki-roots"] }
tonic-prost = "=0.14.3"
uuid = { version = "1.20", features = ["v4"] }
webbrowser = "1.1"
xid = "1.1.1"
